ignore log file, modify and change location of docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,6 +129,15 @@ services:
     command: webserver
     ports:
       - "8080:8080"
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
+      - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+      - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
+      - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+      # Mount the Docker .env file
+      - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/.env
+      # Mount the pipeline .env file
+      - ${AIRFLOW_PROJ_DIR:-.}/pipeline/.env:/opt/airflow/pipeline/.env
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
       interval: 30s
@@ -146,6 +155,15 @@ services:
   airflow-scheduler:
     <<: *airflow-common
     command: scheduler
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
+      - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+      - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
+      - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+      # Mount the Docker .env file
+      - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/.env
+      # Mount the pipeline .env file
+      - ${AIRFLOW_PROJ_DIR:-.}/pipeline/.env:/opt/airflow/pipeline/.env
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
       interval: 30s
@@ -163,6 +181,15 @@ services:
   airflow-worker:
     <<: *airflow-common
     command: celery worker
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
+      - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+      - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
+      - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+      # Mount the Docker .env file
+      - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/.env
+      # Mount the pipeline .env file
+      - ${AIRFLOW_PROJ_DIR:-.}/pipeline/.env:/opt/airflow/pipeline/.env
     healthcheck:
       # yamllint disable rule:line-length
       test:
